# rockchip_rk3568_pcat_manager

./: meson.build
src/: common.h  controller.c  controller.h  main.c  meson.build  modem-manager.c  modem-manager.h  pmu-manager.c  pmu-manager.h  tinywatchdog.c
