project('pcat-manager', 'c')

glib2_deps = dependency('glib-2.0')
gio2_deps = dependency('gio-2.0')
gio2_unix_deps = dependency('gio-unix-2.0')
gthread2_deps = dependency('gthread-2.0')
libusb1_deps = dependency('libusb-1.0')
jsonc_deps = dependency('json-c')
gpiod_deps = dependency('libgpiod')
thread_deps = dependency('threads')

subdir('src')
